<resources>
    <string name="app_name">ESTORE</string>


    <string name="verify_phone_auth">Verify</string>
    <string name="textbold">"<b>"+Have an Account ?+ "</b>" + Sign In</string>;
    <string name="sign_up_btn">Sign Up</string>
    <string name="phone_label">Phone</string>
    <string name="submit_sign_up">Submit</string>
    <string name="phone_verify_notify_title">Confirming phone number</string>
    <string name="phone_verify_notify_message">%s</string>
    <string name="toast_verified">Verified Phone Number</string>
    <string name="toast_unverified">Unverified Phone Number</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="welcome_text">For all your sms verification needs.</string>
    <string name="status_text">Status: unverified</string>
    <string name="status_text_template">Status: verified \'%s\'.</string>
    <string name="toast_start_verify">Verifying phone number: %s</string>
    <string name="pref_desc_secret_override">Server Secret Override</string>
    <string name="pref_title_secret_override">Server Override</string>
    <string name="error_message_internet">No internet connection!</string>
    <string name="error_message_failed">Failed to get results!</string>

    <string name="url_verify">url verify</string>
    <string name="url_reset">url reset</string>
    <string name="server_client_secret">server client secret</string>
    <string name="server_client_secret_v8">server client secret v8</string>
    <string name="url_request">url request</string>


    <!-- This should point to your servers. -->
    <string name="reset_btn">Reset Verification</string>
    <string name="toast_unable_to_reset">Unable to reset verification, perhaps you weren\'t verified.</string>
    <string name="toast_something_wrong">Something went wrong, please try again later.</string>
    <string name="reset_title">Reset your verification</string>
    <string name="sign_up_title">Sign Up to SMS Verify</string>
    <string name="menu_setting_title">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="toast_request_error">Error in response from server</string>
    <string name="pref_title_app_signature">App signature</string>
    <string name="pref_desc_app_signature">Unknown</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verifying_menu_verification">SMS Code</string>
    <string name="verifying_menu_verification_submit">Submit</string>
    <string name="verifying_menu_verification_cancel">Cancel Verification</string>
    <string name="status_default_value">Unverified</string>
    <string name="verifying_menu_verification_required_text">The SMS code is required</string>
    <string name="toast_cancelled_verification">Cancelled verification</string>
    <string name="cancel_verification">Cancel</string>
    <string name="verifier_registered">Registered for SMS receiver</string>
    <string name="verifier_server_response">Server sent SMS</string>
    <string name="verifying_text">Verifying SMS</string>
    <string name="menu_reset_verification_title">Reset Verification</string>


    //Facebook Account Kit
    <string name="FACEBOOK_APP_ID">1898582500437215</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">333e89cdbf82b740c773a96d321fad45</string>

    //Sign up profile
    <string name="err_msg_first_name">Enter first name</string>
    <string name="err_msg_last_name">Enter last name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_password_weak">Password must contain atleast 1 digit,\n1 character and no whitespace</string>
    <string name="err_msg_phone">Enter the phone number</string>
    <string name="err_msg_confirm_password">Enter the confirm password</string>
    <string name="err_msg_match_password">Password and Confirm Password Doesn\'t Match</string>
    <string name="err_msg_lenth_password">Length must be atleast 6 Characters</string>
    <string name="err_msg_lenth_phone">Enter a Valid Number</string>
    <string name="title_activity_home">ESTORE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    //Rupee Symbol
    <string name="rupee">\u20B9</string>
    //Address
    <string name="sup_address_city">City/Town name </string>
    <string name="sup_address_locality_area_street">Locality, area or street </string>
    <string name="sup_address_home_no">Home no. &amp; Building Name </string>
    <string name="sup_address_pinocde">Pincode </string>
    <string name="sup_address_subdistrict">Sub District</string>
    <string name="sup_address_state">State</string>
    <string name="sup_address_landmark">Landmark (Optional)</string>

    //Add new Address
    <string name="sup_address_person_name">Full Name </string>
    <string name="sup_address_mobile">Mobile Number </string>
    <string name="sup_address_email">Email Address (Optional) </string>
    <string name="sup_address_alter_mobile">Alternate Mobile No.</string>
    <string name="sup_address_type">Address Type</string>
    <string name="err_msg_address_sub_district">Select Sub District</string>
    <string name="err_msg_address_city_or_town">Select City or Town</string>
    <string name="err_msg_address_home_no">Please Enter Home No. or Building Name</string>
    <string name="err_msg_address_area">Please Enter Locality, area or street</string>
    <string name="err_msg_address_first_name">Enter First Name</string>
    <string name="err_msg_address_last_name">Enter Last Name</string>
    <string name="err_msg_address_mobile_number">Please Enter Mobile Number</string>
    <string name="err_msg_address_valid_mobile_number">Invalid Mobile Number</string>
    <string name="rate_review"><![CDATA[Rate & Review]]></string>
    <string name="beauty_grooming"><![CDATA[Beauty & Grooming]]></string>
    <string name="fruits_vegitables"><![CDATA[Fruits & Vegitables]]></string>
    <string name="toys_baby"><![CDATA[Toys & Baby]]></string>
    //Product List Sorting
    <string name="action_popularity">POPULARITY</string>
    <string name="action_new_arrival">NEW_ARRIVAL</string>
    <string name="action_price_low_to_high">PRICE_LOW_TO_HIGH</string>
    <string name="action_price_high_to_low">PRICE_HIGH_TO_LOW</string>

    <string name="filled_bullet">\u25CF</string>
    <string name="linear_bullet">\u25CB</string>
    <string name="rect_bullet">\u25A0</string>
    <string name="blank_rect">\u25A1</string>
    <string name="true_tick">\u2713</string>
    <string name="star">\u2605</string>

    //Rx NetworkError Handling
    <string name="generic_http_error_title">Error Occurred</string>
    <string name="generic_http_error_desc">Server is not available. Try again after sometime</string>
    <string name="generic_no_internet_desc">Oops...You do not seem to have a proper internet connection. Please try again after connecting to a valid internet connection</string>
    <string name="generic_no_internet_title">No Internet Connection</string>
    <string name="error_login_expired">Your session has expired. Please login again</string>

</resources>
