<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort_by"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="Sort By"
        app:showAsAction="always">
        <!-- movies submenu -->
        <menu>
            <group
                android:id="@+id/menu_sort_group"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/action_popular_movies"
                    android:checked="true"
                    android:title="@string/action_popularity" />

                <item
                    android:id="@+id/action_new_arrival"
                    android:title="@string/action_new_arrival" />


                <item
                    android:id="@+id/action_price_low_to_high"
                    android:checked="true"
                    android:title="@string/action_price_low_to_high" />

                <item
                    android:id="@+id/action_price_high_to_low"
                    android:title="@string/action_price_high_to_low" />
            </group>
        </menu>
    </item>

</menu>